# containers

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  README  README.md  bench.sh  bench.txt  cabal.haskell-ci  cabal.project  changelog.md  comparison.hs  containers.cabal  foldrBits-progression.hs  membench.hs  stack.yaml
.github/workflows/: arm64.yml  haskell-ci.yml  i386.yml  main.yml  mhs-ci.yml  more-arch.yml  s390x.yml
Data/: BitUtil.hs  DenseIntSet.hs  Graph.hs  IntMap.hs  IntSet.hs  Map.hs  Pair.hs  Sequence.hs  Set.hs  StrictFold.hs  StrictPair.hs  Tree.hs
Data/Containers/: ListUtils.hs
Data/IntMap/: Base.hs  Common.hs  Internal.hs  Lazy.hs  Strict.hs
Data/IntMap/Merge/: Lazy.hs  Strict.hs
Data/IntMap/Strict/: Internal.hs
Data/IntSet/: Base.hs  Internal.hs
Data/Map/: Base.hs  Internal.hs  Lazy.hs  Strict.hs
Data/Map/Lazy/: Merge.hs
Data/Map/Merge/: Lazy.hs  Strict.hs
Data/Map/Strict/: Internal.hs  Merge.hs
Data/Sequence/: Base.hs  Internal.hs  sorting.md
Data/Sequence/Internal/: Sorting.hs  sorting.md
Data/Set/: Base.hs  Internal.hs
Data/Utils/: BitQueue.hs  BitUtil.hs  PtrEquality.hs  StrictFold.hs  StrictMaybe.hs  StrictPair.hs
Utils/Containers/Internal/: BitQueue.hs  BitUtil.hs  BitVec.hs  Coercions.hs  State.hs  StrictPair.hs
benchmarks/: Benchmarks.hs  DenseIntSet.hs  Graph.hs  IntMap.hs  IntSet.hs  IntSetProgression.hs  Makefile  Map.hs  Sequence.hs  SequenceSorting.hs  Set.hs  bench-cmp.sh  benchmarks.cabal
benchmarks/LookupGE/: IntMap.hs  LookupGE_IntMap.hs  LookupGE_Map.hs
benchmarks/SetOperations/: SetOperations.hs
containers/: README.md  changelog.md  containers.cabal  mkappend.hs  note-template-haskell-deps.md
containers-tests/: LICENSE  containers-tests.cabal  include  src
containers-tests/benchmark-utils/Utils/: Random.hs
containers-tests/benchmarks/: Combined.hs  Graph.hs  IntMap.hs  IntSet.hs  ListUtils.hs  Makefile  Map.hs  Sequence.hs  Set.hs  Tree.hs  bench-cmp.pl
containers-tests/benchmarks/LookupGE/: IntMap.hs  LookupGE_IntMap.hs  LookupGE_Map.hs  Map.hs
containers-tests/benchmarks/SetOperations/: Map.hs  SetOperations-IntMap.hs  SetOperations-IntSet.hs  SetOperations-Map.hs  SetOperations-Set.hs  SetOperations.hs  Util.hs
containers-tests/benchmarks/Utils/: Fold.hs  Random.hs
containers-tests/test-utils/: IntMapValidity.hs  IntSetValidity.hs
containers-tests/test-utils/Utils/: MergeFunc.hs  NubSorted.hs  QuickCheck.hs  QuickCheckClasses.hs
containers-tests/tests/: IntMapValidity.hs  IntSetValidity.hs  Makefile  bitqueue-properties.hs  graph-properties.hs  intmap-properties.hs  intmap-strictness.hs  intset-properties.hs  intset-strictness.hs  listutils-properties.hs  map-properties.hs  map-strictness.hs  seq-properties.hs  set-properties.hs  set-strictness.hs  tree-properties.hs
containers-tests/tests/Utils/: ArbitrarySetMap.hs  IsUnit.hs  MergeFunc.hs  NoThunks.hs  Strictness.hs
containers/docs/: conf.py  intro.rst  map.rst  sequence.rst  set.rst
containers/docs/_extensions/: hs-theme.py
containers/include/: containers.h
containers/src/: Prelude.hs
containers/src/Data/: Graph.hs  IntMap.hs  IntSet.hs  Map.hs  Sequence.hs  Set.hs  Tree.hs
containers/src/Data/Containers/: ListUtils.hs
containers/src/Data/FingerTree/: IntPlus.hs
containers/src/Data/FingerTree/IntPlus/: Unsafe.hs
containers/src/Data/IntMap/: .Internal.hs.swo  Internal.hs  Lazy.hs  Strict.hs
containers/src/Data/IntMap/Internal/: Debug.hs
containers/src/Data/IntMap/Merge/: Internal.hs  Lazy.hs  Strict.hs
containers/src/Data/IntMap/Strict/: Internal.hs
containers/src/Data/IntSet/: Internal.hs
containers/src/Data/IntSet/Internal/: IntTreeCommons.hs
containers/src/Data/Map/: Internal.hs  Lazy.hs  Strict.hs
containers/src/Data/Map/Internal/: Debug.hs  DeprecatedShowTree.hs
containers/src/Data/Map/Merge/: Lazy.hs  Strict.hs
containers/src/Data/Map/Merge/Set/: Internal.hs  Lazy.hs  Strict.hs
containers/src/Data/Map/Strict/: Internal.hs
containers/src/Data/Sequence/: Internal.hs  StableInternal.hs
containers/src/Data/Sequence/Internal/: Depth.hs  Sorting.hs  sorting.md
containers/src/Data/Set/: Internal.hs  Merge.hs
containers/src/Utils/Containers/Internal/: BitQueue.hs  BitUtil.hs  Coercions.hs  EqOrdUtil.hs  IsList.hs  Prelude.hs  PtrEquality.hs  State.hs  Strict.hs  StrictMaybe.hs  StrictPair.hs  StrictTriple.hs  TypeError.hs  UnboxedMaybe.hs  UnboxedSolo.hs
docs/: .gitignore  Makefile  conf.py  index.rst  intro.rst  map.rst  sequence.rst  set.rst
docs/_extensions/: HaddockAutolinker.py  haddock-autolink.py
docs/_static/: sitemap.xml
docs/_static/css/: hs-theme.css
docs/_templates/: layout.html
include/: Typeable.h  containers.h
tests/: IntMapStrictness.hs  IntMapValidity.hs  IntSetValidity.hs  Makefile  Set.hs  all.T  bitqueue-properties.hs  datamap002.hs  dense-intset-properties.hs  deprecated-properties.hs  intmap-properties.hs  intmap-strictness.hs  intset-properties.hs  intset-strictness.hs  listutils-properties.hs  map-properties.hs  map-strictness.hs  seq-properties.hs  sequence001.hs  sequence001.stdout  set-properties.hs  tree-properties.hs
tests-ghc/: DataMapCoerce.hs  DataMapCoerce.stdout  all.T  dataintset001.hs  mapcoercemap.hs
tests-ghc/unreliable/: README  coerce_tests  mapcoerceintmap.hs  mapcoerceintmapstrict.hs  mapcoerceseq.hs  mapcoercesmap.hs
