name: containers
version: 0.5.0.0
license: BSD3
license-file: LICENSE
maintainer: fox@ucw.cz
bug-reports: https://github.com/haskell/containers/issues
synopsis: Assorted concrete container types
category: Data Structures
description:
    This package contains efficient general-purpose implementations
    of various basic immutable container types.  The declared cost of
    each operation is either worst-case or amortized, but remains
    valid even if structures are shared.
build-type: Simple
cabal-version:  >=1.8
extra-source-files: include/Typeable.h

source-repository head
    type:     git
    location: http://github.com/haskell/containers.git

flag testing
    description: Expose internals for testing (required for cabal test)
    default: False

Library
    build-depends: base >= 4.2 && < 5, array, deepseq >= 1.2 && < 1.3
    if impl(ghc>=6.10)
        build-depends: ghc-prim

    ghc-options: -O2 -Wall

    exposed-modules:
        Data.IntMap
        Data.IntMap.Lazy
        Data.IntMap.Strict
        Data.IntSet
        Data.Map
        Data.Map.Lazy
        Data.Map.Strict
        Data.Set
    if !impl(nhc98)
        exposed-modules:
            Data.Graph
            Data.Sequence
            Data.Tree
    other-modules:
        Data.IntMap.Base
        Data.Map.Base
        Data.StrictPair

    include-dirs: include

    extensions: CPP
    if impl(ghc)
        extensions:
            DeriveDataTypeable
            StandaloneDeriving
            MagicHash
            Rank2Types
    if flag(testing)
        cpp-options: -DTESTING
        build-depends: QuickCheck

Test-suite map-lazy-properties
    hs-source-dirs: tests
    main-is: map-properties.hs
    type: exitcode-stdio-1.0

    build-depends:
        base,
        containers,
        HUnit,
        QuickCheck,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2

Test-suite map-strict-properties
    hs-source-dirs: tests
    main-is: map-properties.hs
    type: exitcode-stdio-1.0

    build-depends:
        base,
        containers,
        HUnit,
        QuickCheck,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2
    cpp-options: -DSTRICT

Test-suite set-properties
    hs-source-dirs: tests
    main-is: set-properties.hs
    type: exitcode-stdio-1.0

    build-depends:
        base,
        containers,
        QuickCheck,
        test-framework,
        test-framework-quickcheck2

Test-suite intmap-lazy-properties
    hs-source-dirs: tests
    main-is: intmap-properties.hs
    type: exitcode-stdio-1.0

    build-depends:
        base,
        containers,
        HUnit,
        QuickCheck,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2

Test-suite intmap-strict-properties
    hs-source-dirs: tests
    main-is: intmap-properties.hs
    type: exitcode-stdio-1.0

    build-depends:
        base,
        containers,
        HUnit,
        QuickCheck,
        test-framework,
        test-framework-hunit,
        test-framework-quickcheck2
    cpp-options: -DSTRICT

Test-suite intset-properties
    hs-source-dirs: tests
    main-is: intset-properties.hs
    type: exitcode-stdio-1.0

    build-depends:
        base,
        containers,
        QuickCheck,
        test-framework,
        test-framework-quickcheck2
