name: containers
version: 0.4.2.1
license: BSD3
license-file: LICENSE
maintainer: fox@ucw.cz
bug-reports: http://hackage.haskell.org/trac/ghc/newticket?component=libraries%20%28other%29
synopsis: Assorted concrete container types
category: Data Structures
description:
    This package contains efficient general-purpose implementations
    of various basic immutable container types.  The declared cost of
    each operation is either worst-case or amortized, but remains
    valid even if structures are shared.
build-type: Simple
cabal-version:  >=1.6
extra-source-files: include/Typeable.h

source-repository head
    type:     git
    location: http://github.com/haskell/containers.git

Library {
    build-depends: base >= 4.2 && < 5, array, deepseq >= 1.2 && < 1.4
    ghc-options: -O2
    if impl(ghc>6.10)
        Ghc-Options: -fregs-graph
    exposed-modules:
        Data.IntMap
        Data.IntSet
        Data.Map
        Data.Set
    include-dirs: include
    extensions: CPP
    if !impl(nhc98) {
        exposed-modules:
            Data.Graph
            Data.Sequence
            Data.Tree
    }
    if impl(ghc) {
        extensions: DeriveDataTypeable, StandaloneDeriving,
                    MagicHash, Rank2Types
    }
}

