cabal-version:      2.2
name:               containers-tests
version:            0
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         libraries@haskell.org
bug-reports:        https://github.com/haskell/containers/issues
synopsis:           Assorted concrete container types: Tests
category:           Data Structures
description:
  .
  This package contains tests and benchmarks for @containers-package

build-type:         Simple
extra-source-files:
  include/containers.h
  tests/Makefile
  tests/*.hs
  benchmarks/Makefile
  benchmarks/bench-cmp.pl
  benchmarks/bench-cmp.sh
  benchmarks/*.hs
  benchmarks/SetOperations/Makefile
  benchmarks/SetOperations/*.hs
  benchmarks/LookupGE/Makefile
  benchmarks/LookupGE/*.hs

tested-with:
  GHC ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 ||
      ==9.4.8 || ==9.6.6 || ==9.8.4 || ==9.10.1 || ==9.12.1

source-repository head
  type:     git
  location: https://github.com/haskell/containers

common deps
  build-depends:
      array    >=0.4.0.0
    , base     >=4.10    && <5
    , deepseq  >=1.2     && <1.6
    , template-haskell

common warnings
  ghc-options: -Werror=unused-top-binds

common test-deps
  import: deps
  build-depends:
      containers-tests
    , QuickCheck                  >=2.7.1
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , transformers

common benchmark-deps
  import: deps
  build-depends:
      containers-tests
    , deepseq           >=1.1.0.0 && <1.6
    , tasty-bench       >=0.3.1   && <0.5

  -- Flags recommended by tasty-bench
  if impl(ghc >= 8.6)
    ghc-options:    -fproc-alignment=64

-- Copy of containers library,
library
  import: deps
  default-language: Haskell2010
  -- this is important for testing; may it affect benchmarks?
  cpp-options:      -DTESTING

  include-dirs:     include
  hs-source-dirs:   src

  ghc-options:      -O2 -Wall
  if impl(ghc >= 8.6)
    ghc-options:    -fproc-alignment=64

  other-extensions:
    BangPatterns
    CPP

  exposed-modules:
    Data.Containers.ListUtils
    Data.Graph
    Data.IntMap
    Data.IntMap.Internal
    Data.IntMap.Internal.Debug
    Data.IntMap.Lazy
    Data.IntMap.Merge.Lazy
    Data.IntMap.Merge.Strict
    Data.IntMap.Strict
    Data.IntMap.Strict.Internal
    Data.IntSet
    Data.IntSet.Internal
    Data.IntSet.Internal.IntTreeCommons
    Data.Map
    Data.Map.Internal
    Data.Map.Internal.Debug
    Data.Map.Lazy
    Data.Map.Merge.Lazy
    Data.Map.Merge.Strict
    Data.Map.Strict
    Data.Map.Strict.Internal
    Data.Sequence
    Data.Sequence.Internal
    Data.Sequence.Internal.Sorting
    Data.Set
    Data.Set.Internal
    Data.Tree
    Utils.Containers.Internal.BitQueue
    Utils.Containers.Internal.BitUtil
    Utils.Containers.Internal.StrictPair

  other-modules:
    Utils.Containers.Internal.Prelude
    Utils.Containers.Internal.PtrEquality
    Utils.Containers.Internal.State
    Utils.Containers.Internal.StrictMaybe
    Utils.Containers.Internal.EqOrdUtil

  if impl(ghc >= 8.6)
    ghc-options: -Werror

-----------------------------
-- B E N C H M A R K I N G --
-----------------------------

benchmark intmap-benchmarks
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        IntMap.hs
  ghc-options:    -O2

  other-modules:
    Utils.Fold

  build-depends:
      transformers
    , random >=1.0 && <1.3

benchmark intset-benchmarks
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        IntSet.hs
  ghc-options:    -O2

  other-modules:
    Utils.Fold

  build-depends:
      transformers
    , random >=1.0 && <1.3

benchmark map-benchmarks
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        Map.hs
  ghc-options:    -O2
  build-depends:
      random >=1.0 && <1.3

  other-modules:
      Utils.Random

  other-modules:
    Utils.Fold

  build-depends:
    transformers

benchmark tree-benchmarks
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        Tree.hs
  ghc-options:    -O2

  other-modules:
    Utils.Fold

  build-depends:
    transformers

benchmark sequence-benchmarks
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        Sequence.hs
  ghc-options:    -O2
  build-depends:
      random >=1.0 && <1.3
    , transformers

  other-modules:
    Utils.Fold

  build-depends:
    transformers

benchmark set-benchmarks
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        Set.hs
  ghc-options:    -O2
  build-depends:
      random >=1.0 && <1.3

  other-modules:
      Utils.Random

  other-modules:
    Utils.Fold

  build-depends:
    transformers

benchmark graph-benchmarks
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks
  main-is:        Graph.hs
  ghc-options:    -O2
  build-depends:
      random >=1.0 && <1.3

benchmark set-operations-intmap
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks/SetOperations
  main-is:        SetOperations-IntMap.hs
  other-modules:  SetOperations
  ghc-options:    -O2

benchmark set-operations-intset
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks/SetOperations
  main-is:        SetOperations-IntSet.hs
  other-modules:  SetOperations
  ghc-options:    -O2

benchmark set-operations-map
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs:
      benchmarks/SetOperations
      benchmarks
  main-is:        SetOperations-Map.hs
  other-modules:  SetOperations
  ghc-options:    -O2
  build-depends:
      random >=1.0 && <1.3

  other-modules:
      Utils.Random

benchmark set-operations-set
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs:
      benchmarks/SetOperations
      benchmarks
  main-is:        SetOperations-Set.hs
  other-modules:  SetOperations
  ghc-options:    -O2
  build-depends:
      random >=1.0 && <1.3

  other-modules:
      Utils.Random

benchmark lookupge-intmap
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks/LookupGE
  main-is:        IntMap.hs
  other-modules:  LookupGE_IntMap
  build-depends:  containers-tests

benchmark lookupge-map
  import: benchmark-deps, warnings
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmarks/LookupGE
  main-is:        Map.hs
  other-modules:  LookupGE_Map
  build-depends:  containers-tests
  ghc-options:    -O2

-------------------
-- T E S T I N G --
-------------------

-- Every test-suite contains the build-depends and options of the library,
-- plus the testing stuff.

test-suite map-lazy-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          map-properties.hs
  type:             exitcode-stdio-1.0

  other-modules:
    Utils.ArbitrarySetMap

  ghc-options:      -O2
  other-extensions:
    BangPatterns
    CPP

test-suite map-strict-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          map-properties.hs
  type:             exitcode-stdio-1.0
  cpp-options:      -DSTRICT

  other-modules:
    Utils.ArbitrarySetMap

  ghc-options:      -O2
  other-extensions:
    BangPatterns
    CPP

test-suite bitqueue-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          bitqueue-properties.hs
  type:             exitcode-stdio-1.0
  ghc-options:      -O2
  other-extensions:
    BangPatterns
    CPP

test-suite set-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          set-properties.hs
  type:             exitcode-stdio-1.0

  other-modules:
    Utils.ArbitrarySetMap

  ghc-options:      -O2
  other-extensions:
    BangPatterns
    CPP

test-suite intmap-lazy-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          intmap-properties.hs
  type:             exitcode-stdio-1.0
  other-modules:    IntMapValidity

  ghc-options:      -O2
  other-extensions:
    BangPatterns
    CPP

test-suite intmap-strict-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          intmap-properties.hs
  type:             exitcode-stdio-1.0
  cpp-options:      -DSTRICT
  other-modules:    IntMapValidity

  ghc-options:      -O2
  other-extensions:
    BangPatterns
    CPP

test-suite intset-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          intset-properties.hs
  type:             exitcode-stdio-1.0
  other-modules:    IntSetValidity

  ghc-options:      -O2
  other-extensions:
    BangPatterns
    CPP

test-suite seq-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          seq-properties.hs
  type:             exitcode-stdio-1.0
  build-depends:
      ChasingBottoms

  ghc-options:      -O2
  other-extensions:
    BangPatterns
    CPP

  other-modules:
      Utils.Strictness

test-suite tree-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          tree-properties.hs
  type:             exitcode-stdio-1.0

  ghc-options:      -O2
  other-extensions:
    BangPatterns
    CPP

test-suite graph-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          graph-properties.hs
  type:             exitcode-stdio-1.0
  ghc-options:      -O2

test-suite map-strictness-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          map-strictness.hs
  type:             exitcode-stdio-1.0
  build-depends:
      ChasingBottoms

  ghc-options:      -Wall
  other-extensions:
    BangPatterns
    CPP

  other-modules:
    Utils.ArbitrarySetMap
    Utils.MergeFunc
    Utils.NubSorted
    Utils.Strictness

test-suite intmap-strictness-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          intmap-strictness.hs
  type:             exitcode-stdio-1.0
  other-extensions:
    BangPatterns
    CPP

  build-depends:
      ChasingBottoms

  ghc-options:      -Wall

  other-modules:
    Utils.MergeFunc
    Utils.NubSorted
    Utils.Strictness

test-suite set-strictness-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          set-strictness.hs
  type:             exitcode-stdio-1.0
  other-extensions:
    BangPatterns
    CPP

  build-depends:
      ChasingBottoms

  ghc-options:      -Wall

  other-modules:
    Utils.ArbitrarySetMap
    Utils.NubSorted
    Utils.Strictness

test-suite intset-strictness-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          intset-strictness.hs
  type:             exitcode-stdio-1.0
  other-extensions:
    BangPatterns
    CPP

  build-depends:
      ChasingBottoms

  ghc-options:      -Wall

  other-modules:
    Utils.NubSorted
    Utils.Strictness

test-suite listutils-properties
  import: test-deps, warnings
  default-language: Haskell2010
  hs-source-dirs: tests
  main-is:        listutils-properties.hs
  type:           exitcode-stdio-1.0
  build-depends:
      ChasingBottoms

  ghc-options:    -Wall
